--- a/pentarch-v10/index.html
+++ b/pentarch-v10/index.html
@@ -762,7 +762,7 @@
           
   
   <span class="md-ellipsis">
-    Pentarch v1.0 — Reversal Events
+    Pentarch v1.0 — Five Cycle Events
   </span>
   
 
@@ -773,7 +773,7 @@
         
   
   <span class="md-ellipsis">
-    Pentarch v1.0 — Reversal Events
+    Pentarch v1.0 — Five Cycle Events
   </span>
   
 
